--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,7 @@
+Forked and updated for SDL2 and recent Lua
+Additionally switched to a cmake build system
+
+-- original README below
 = Lua Pong
 
 See http://adam.blog.heroku.com/past/2009/1/27/lua_the_embeddable_game_scripting_language/
